--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Vue + TupeScript</title>
+    <title>Vue + TypeScript</title>
   </head>
   <body>
     <div id="app"></div>
